update to style sheet

--- a/game.html
+++ b/game.html
@@ -11,6 +11,6 @@
   </head>
 
 <body class="GamePage">
-    <img src="Images/Home_Button.png" onclick="window.location ='index.html'" class="Gamescreen">
+    <img src="Images/Home_Button.png" onclick="window.location ='index.html'" class="GamePage">
 
 </body>
