--- a/help.html
+++ b/help.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en" class="html1">
 
   <head>
@@ -7,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="An online multiplayer wild west style shooter."/>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" type="Images/Gunslinger_Logo_Transparent.png" href="Images/Gunslinger_Logo.png">
+    <link rel="shortcut icon" type="Images/Gunslinger_Logo_Transparent.png" href="Images/Gunslinger_Logo_Transparent.png">
 
   </head>
 
