--- a/opponent.html
+++ b/opponent.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en" class="html1">
 
   <head>
@@ -7,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="An online multiplayer wild west style shooter."/>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" type="Images/Gunslinger_Logo_Transparent.png" href="Images/Gunslinger_Logo.png">
+    <link rel="shortcut icon" type="Images/Gunslinger_Logo_Transparent.png" href="Images/Gunslinger_Logo_Transparent.png">
 
   </head>
 
@@ -17,7 +15,7 @@
       <img id="ChooseYourOpponent" src="Images/ChooseYourOpponent_Logo.png" class="OpponentPage">
   </h1>
   <section id="OpponentPage_buttons" class="OpponentPage">
-    <button type="button" name="Next" onclick="window.location ='Game.html'">Next</button>
+    <button type="button" name="Next" onclick="window.location ='game.html'">Next</button>
       <br>
     <img src="Images/Home_Button.png" onclick="window.location ='index.html'" class="HomeButton">
 
