pre-Sensor check
Unload to check device compatability

--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="Images/Gunslinger_Logo_Transparent.png" href="Images/Gunslinger_Logo_Transparent.png">
   </head>
 
-<body class="GamePage">
-    <img src="Images/Home_Button.png" onclick="window.location ='index.html'" class="GamePage">
-
+<body>
+    <img id="Gun" src="Images/Gun.png" onclick = "window.location ='score.html'" >
 </body>
+</html
