--- a/index.html
+++ b/index.html
@@ -8,25 +8,11 @@
     <meta name="description" content="An online multiplayer wild west style shooter."/>
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" type="Images/Gunslinger_Logo_Transparent.png" href="Images/Gunslinger_Logo_Transparent.png">
-
   </head>
 
-<body class="HomePage">
-  <h1>
-    <img id="HomePage_Logo" src="Images/Gunslinger_Logo_Transparent.png" class="HomePage">
-  </h1>
-  <section id="Homepage_Buttons" class="HomePage">
-    <img id="Start_Button" src="Images/button1.png" onclick="window.location.href = 'opponent.html'" class="HomePage">
-      <br>
-    <img id="Help_button" src="Images/button2.png" onclick="window.location.href = 'help.html'" class="HomePage">
-  </section>
+<body>
+  <img id="HomePage_Logo" src="Images/Gunslinger_Logo_transparent.png" alt="Images/Gunslinger_Logo.png">
+  <img class="HomePageButton" src="Images/button1.png" onclick="window.location.href = 'opponent.html'">
+  <img class="HomePageButton" src="Images/button2.png" onclick="window.location.href = 'help.html'">
 </body>
-
-
-
-
-
-
-
-
-<script src="index.js"></script>
+</html>
