--- a/score.html
+++ b/score.html
@@ -1,3 +1,16 @@
-<body class="ScorePage">
-  <p1 class="ScorePage">Gunslinger ScorePage</p1>
+<!doctype html>
+<html lang="en" class="html1">
+
+  <head>
+    <title>Gunslinger</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="description" content="An online multiplayer wild west style shooter."/>
+    <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" type="Images/Gunslinger_Logo_Transparent.png" href="Images/Gunslinger_Logo_Transparent.png">
+  </head>
+
+<body>
+  <p1>HELLO WORLD</p1>
 </body>
+</html
