--- a/help.html
+++ b/help.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="en" class="html1">
 
   <head>
@@ -7,17 +8,11 @@
     <meta name="description" content="An online multiplayer wild west style shooter."/>
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" type="Images/Gunslinger_Logo_Transparent.png" href="Images/Gunslinger_Logo_Transparent.png">
-
   </head>
 
-<body class="HelpPage">
-  <h1>
-    <img id="HelpPage_Logo" src="Images/HELP.png" class="HelpPage">
-  </h1>
-  <section id="HelpPage_buttons" class="HelpPage">
-    <img src="Images/HELP_text.png" class="HelpPage">
-      <br>
-    <img src="Images/Home_Button.png" onclick="window.location ='index.html'" class="HelpPage">
-
-  </section>
+<body>
+    <img id="HelpPage_Logo" src="Images/HELP.png" class="HelpPageLogo">
+    <img id="HelpPageText" src="Images/HELP_text.png">
+    <img class="HomeButton" src="Images/Home_Button.png" onclick="window.location ='index.html'" >
 </body>
+</html>
