--- a/opponent.html
+++ b/opponent.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="en" class="html1">
 
   <head>
@@ -7,17 +8,11 @@
     <meta name="description" content="An online multiplayer wild west style shooter."/>
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" type="Images/Gunslinger_Logo_Transparent.png" href="Images/Gunslinger_Logo_Transparent.png">
-
   </head>
 
-<body class="OpponentPage">
-  <h1>
-      <img id="ChooseYourOpponent" src="Images/ChooseYourOpponent_Logo.png" class="OpponentPage">
-  </h1>
-  <section id="OpponentPage_buttons" class="OpponentPage">
-    <button type="button" name="Next" onclick="window.location ='game.html'">Next</button>
-      <br>
-    <img src="Images/Home_Button.png" onclick="window.location ='index.html'" class="HomeButton">
-
-  </section>
+<body >
+      <img id="ChooseYourOpponent" src="Images/ChooseYourOpponent_Logo.png">
+      <button type="button" id=TempButton onclick="window.location ='game.html'">Next</button>
+      <img class="HomeButton" src="Images/Home_Button.png" onclick="window.location ='index.html'">
 </body>
+</html>
