--- a/score.html
+++ b/score.html
@@ -11,6 +11,8 @@
   </head>
 
 <body>
-  <p1>HELLO WORLD</p1>
+  <p1 src=></p1>
 </body>
-</html
+
+<script src="game.js" charset="utf-8"></script>
+</html>
