update on iphone compatibility

--- a/score.html
+++ b/score.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Gunslinger</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="An online multiplayer wild west style shooter."/>
     <link rel="stylesheet" href="main.css">
@@ -11,8 +11,8 @@
   </head>
 
 <body>
-  <p1 src=></p1>
+  <script src="p5.js"></script>
+  <script src = "game.js"></script>
+  <p src="aim"></p>
 </body>
-
-<script src="game.js" charset="utf-8"></script>
 </html>
