--- a/game.html
+++ b/game.html
@@ -11,6 +11,12 @@
   </head>
 
 <body>
-    <img id="Gun" src="Images/Gun.png" onclick = "window.location ='score.html'" >
+  <img class = "HomeButton" src="Images/Home_Button.png" onclick="window.location ='index.html'">
+  <!<button type="button" onclick="setup()">setup</button>>
+  <!<button type="button" onclick="requestAccess()">Request access</button>>
+  <!<button type="button" onclick="Rotation()">Rotation</button>>
+  <img id="Gun" src="Images/Gun.png" onclick = "window.location ='score.html'">
+  <script src='p5.js'></script>
+  <script src='game.js'></script>
 </body>
-</html
+</html>
