attempt two at orientation detection

--- a/game.html
+++ b/game.html
@@ -12,11 +12,13 @@
 
 <body>
   <img class = "HomeButton" src="Images/Home_Button.png" onclick="window.location ='index.html'">
-  <!<button type="button" onclick="setup()">setup</button>>
-  <!<button type="button" onclick="requestAccess()">Request access</button>>
-  <!<button type="button" onclick="Rotation()">Rotation</button>>
-  <img id="Gun" src="Images/Gun.png" onclick = "window.location ='score.html'">
+  <button type="button" onclick="setup()">setup</button>
+  <button type="button" onclick="requestAccess()">Request access</button>
+  <button type="button" onclick="Rotation()">Rotation</button>
+
   <script src='p5.js'></script>
+  <script src="p5.dom.min.js"></script>
   <script src='game.js'></script>
+  <img id="Gun" src="Images/Gun.png" onclick = "window.location ='score.html'">
 </body>
 </html>
