--- a/score.html
+++ b/score.html
@@ -2,17 +2,14 @@
 <html lang="en" class="html1">
 
   <head>
-    <title>Gunslinger</title>
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="description" content="An online multiplayer wild west style shooter."/>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="shortcut icon" type="Images/Gunslinger_Logo_Transparent.png" href="Images/Gunslinger_Logo_Transparent.png">
   </head>
 
 <body>
-  <script src="p5.js"></script>
   <script src = "game.js"></script>
-  <p src="aim"></p>
-</body>
-</html>
+</body></html>
